# brand_intelligence_platform

./: .env.docker  .env.example  .gitignore  AGENTS_QUICKSTART.md  API_GUIDE.md  CLAUDE.md  DEMO_SCRIPT.md  DOCKER_GUIDE.md  FRONTEND_COMPLETE.md  Makefile  QUICK_START.md  README.md  SCHEMA.md  SETUP_NEWS.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/agents/: README.md  __init__.py  analyzer_agent.py  base_agent.py  brand_plan_agent.py  insight_discovery_agent.py  scenario_agent.py  strategy_agent.py  validator_agent.py
backend/agents/core/: base_agent.py
backend/agents/models/: __init__.py  outputs.py
backend/agents/prompts/: __init__.py  analyzer.py  brand_plan.py  insight_discovery.py  scenario.py  strategy.py  validator.py
backend/api/: agents.py  main_routes.py  routes.py
backend/core/: config.py
backend/db/: __init__.py  repositories.py  supabase_client.py
backend/db/migrations/: 001_initial_schema.sql  002_news_intelligence.sql  003_fix_news_permissions.sql  README.md
backend/db/seeds/: __init__.py  seed_data.py
backend/scripts/: seed_only.sh  setup_database.sh
backend/services/: news_service.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedConfidence.tsx  BrandComparisonCard.tsx  ConfettiEffect.tsx  InsightCard.tsx  LoadingOverlay.tsx  PlanSection.tsx  PositioningMatrix.tsx  SWOTAnalysis.tsx  Toast.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: BrandPlanner.tsx  CompetitiveIntel.tsx  Dashboard.tsx  ScenarioModeling.tsx
frontend/src/services/: api.ts
scripts/: docker-start.sh  run_demo.sh  run_production.sh
src/brand_intelligence/: __init__.py  config.py  main.py
tests/: __init__.py  test_config.py
